--- a/index.html
+++ b/index.html
@@ -3204,7 +3204,7 @@ console.log('data.js v1.2 carregado com', window.stockData.length, 'produtos');`
 
             if (coverage.outOfStock) {
                 return {
-                    label: 'Sem estoque',
+                    label: 'S/ Estoque',
                     detail: 'Ruptura imediata — produto sem unidades disponíveis no estoque atual.',
                     fullText: 'Sem estoque — ruptura imediata'
                 };
