--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
 
         <div class="pareto-section">
             <h3 class="header-label">📊 Análise ABC por Vendas <span class="info-icon has-tooltip" tabindex="0" aria-label="Análise ABC por Vendas" data-tooltip="Organizamos os produtos pelo quanto venderam nos últimos meses. Os que somam a maior parte do dinheiro ficam na Classe A, os do meio na B e o restante na C." data-tooltip-position="top">?</span></h3>
-            <p class="pareto-description">Ordenamos as vendas acumuladas dos últimos meses e calculamos sua participação no total dividindo a venda de cada produto pelo valor total vendido. Assim, os principais entram na Classe A, os médios na B e os menores na C.</p>
+            <p class="pareto-description">Ordenamos as vendas acumuladas dos últimos meses e calculamos sua participação no total dividindo a venda de cada produto pelo valor total vendido. Assim, os principais entram na Classe A, que somam cerca de 70–80% das vendas; os médios ficam na Classe B, com mais 15–25%; e os menores na Classe C, que representam os últimos 5–10%.</p>
             <div id="paretoContent"></div>
         </div>
         <div class="gauges-container" id="gaugesContainer">
@@ -3111,7 +3111,7 @@ console.log('data.js v1.2 carregado com', window.stockData.length, 'produtos');`
                             <th><span class="header-label">Item<span class="info-icon has-tooltip" tabindex="0" aria-label="Descrição do item" data-tooltip="Nome do produto como aparece no cadastro." data-tooltip-position="top">?</span></span></th>
                             <th><span class="header-label">Vendas 3M<span class="info-icon has-tooltip" tabindex="0" aria-label="Vendas nos últimos 3 meses" data-tooltip="Total vendido nos últimos quatro meses usados neste cálculo." data-tooltip-position="top">?</span></span></th>
                             <th><span class="header-label">% Individual<span class="info-icon has-tooltip" tabindex="0" aria-label="Percentual individual" data-tooltip="Mostra quanto o produto representa sozinho do total de vendas. É calculado dividindo a venda do item pelo valor total vendido." data-tooltip-position="top">?</span></span></th>
-                            <th><span class="header-label">% Acumulado<span class="info-icon has-tooltip" tabindex="0" aria-label="Percentual acumulado" data-tooltip="Mostra quanto já representam juntos este produto e os anteriores da lista. É calculado somando o percentual individual dele com os de cima até aqui." data-tooltip-position="top">?</span></span></th>
+                            <th><span class="header-label">% Acumulado<span class="info-icon has-tooltip" tabindex="0" aria-label="Percentual acumulado" data-tooltip="Mostra quanto já representam juntos o primeiro produto e os seguintes da lista. É calculado somando o percentual individual dele com os de cima até aqui." data-tooltip-position="top">?</span></span></th>
                             <th><span class="header-label">Classe<span class="info-icon has-tooltip" tabindex="0" aria-label="Classe ABC" data-tooltip="Resultado da divisão ABC: Classe A reúne poucos produtos que somam cerca de 70–80% das vendas totais. Classe B representa os itens seguintes, com mais 15–25%. Classe C inclui os demais produtos, que juntos ficam em torno de 5–10%." data-tooltip-position="top">?</span></span></th>
                         </tr>
                     </thead>
