--- a/gerador_template.html
+++ b/gerador_template.html
@@ -214,6 +214,13 @@
                         <td>⚠️ Opcional</td>
                     </tr>
                     <tr>
+                        <td><strong>Estoque Bom Futuro</strong></td>
+                        <td>90-16</td>
+                        <td>BOM FUTURO, ESTOQUE 90-16</td>
+                        <td>10</td>
+                        <td>⚠️ Opcional</td>
+                    </tr>
+                    <tr>
                         <td><strong>Duração</strong></td>
                         <td>ESTOQUE EM MESES</td>
                         <td>MESES, STOCKMONTHS</td>
@@ -321,6 +328,7 @@
                         '1-4': 40,
                         '90-13': 0,
                         '90-15': 0,
+                        '90-16': 0,
                         'ESTOQUE EM MESES': 0.0,
                         'VENDAS 4M': 0,
                         'MÉDIA 3M': 0,
@@ -337,6 +345,7 @@
                         '1-4': 9160,
                         '90-13': 4800,
                         '90-15': 0,
+                        '90-16': 1200,
                         'ESTOQUE EM MESES': 1.3,
                         'VENDAS 4M': 10800,
                         'MÉDIA 3M': 3600,
@@ -353,6 +362,7 @@
                         '1-4': 0,
                         '90-13': 0,
                         '90-15': 0,
+                        '90-16': 0,
                         'ESTOQUE EM MESES': 0.0,
                         'VENDAS 4M': 0,
                         'MÉDIA 3M': 0,
@@ -391,6 +401,7 @@
                 {wch: 10}, // 1-4
                 {wch: 10}, // 90-13
                 {wch: 10}, // 90-15
+                {wch: 10}, // 90-16
                 {wch: 18}, // ESTOQUE EM MESES
                 {wch: 12}, // VENDAS 4M
                 {wch: 12}, // MÉDIA 3M
@@ -410,10 +421,10 @@
         }
 
         function downloadCSVTemplate() {
-            const csvContent = `CÓDIGO,FORNECEDOR,FAMÍLIA,ITEM,1-4,90-13,90-15,ESTOQUE EM MESES,VENDAS 4M,MÉDIA 3M,NOVEMBRO,DEZEMBRO,COBERTURA,FCOBERTURA
-224.36.7,HOSHINE,BORRACHA SILICONE,HOSHINE 3421,40,0,0,0.0,0,0,0,0,0.0,0.0
-220.12.7,HOSHINE,BORRACHA SILICONE,HOSHINE 3431,9160,4800,0,1.3,10800,3600,5200,4800,1.3,1.5
-SEU_CODIGO_AQUI,SEU_FORNECEDOR,SUA_FAMILIA,SEU_PRODUTO,0,0,0,0.0,0,0,0,0,0.0,0.0`;
+            const csvContent = `CÓDIGO,FORNECEDOR,FAMÍLIA,ITEM,1-4,90-13,90-15,90-16,ESTOQUE EM MESES,VENDAS 4M,MÉDIA 3M,NOVEMBRO,DEZEMBRO,COBERTURA,FCOBERTURA
+224.36.7,HOSHINE,BORRACHA SILICONE,HOSHINE 3421,40,0,0,0,0.0,0,0,0,0,0.0,0.0
+220.12.7,HOSHINE,BORRACHA SILICONE,HOSHINE 3431,9160,4800,0,1200,1.3,10800,3600,5200,4800,1.3,1.5
+SEU_CODIGO_AQUI,SEU_FORNECEDOR,SUA_FAMILIA,SEU_PRODUTO,0,0,0,0,0.0,0,0,0,0,0.0,0.0`;
 
             const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
             const link = document.createElement('a');
